--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li class="menu-item"><a href="#">products +</a>
                     <ul class="menu-sub-list">
                         <li class="menu-item1"><a href="#">product 1 </a></li>
-                        <li class="menu-item2"><a href="#">product 2 </a>
+                        <li class="menu-item2"><a href="#">product 2 + </a>
                             <ul class="menu-sub-list2">
                                 <li><a href="#">product 3</a></li>
                                 <li><a href="#">product 4</a></li>
